--- a/feature/src/main/res/values/strings.xml
+++ b/feature/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="next">Next</string>
     <string name="repeat_mode">Repeat Mode</string>
     <string name="shuffle">Shuffle</string>
+    <string name="device_files">기기 파일</string>
 
     <string name="permission_rationale_message">음악 파일에 접근하려면 권한이 필요합니다.</string>
     <string name="permission_allow_action">허용</string>
